@@ -1,4 +1,4 @@
-package cuke4duke;
+package cuke4duke.annotation;
 
 import java.lang.annotation.ElementType;
 import java.lang.annotation.Retention;
