@@ -4,7 +4,7 @@
 	<groupId>cuke4duke</groupId>
 	<artifactId>cuke4duke-ejb3-example</artifactId>
 	<packaging>jar</packaging>
-	<version>1.0-SNAPSHOT</version>
+	<version>0.2.3</version>
 	<name>Cuke4Duke EJB3 Example</name>
 	<url>http://maven.apache.org</url>
 	<build>
@@ -69,7 +69,7 @@
 		<dependency>
 			<groupId>cuke4duke</groupId>
 			<artifactId>cuke4duke</artifactId>
-			<version>0.2.0</version>
+			<version>0.2.3</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
