@@ -1,7 +1,7 @@
 package simple;
 
-import cuke4duke.After;
-import cuke4duke.Before;
+import cuke4duke.annotation.After;
+import cuke4duke.annotation.Before;
 import cuke4duke.annotation.EN.*;
 
 import static org.junit.Assert.assertEquals;
