@@ -7,6 +7,7 @@
 
 === Changed Features
 * @Given, @When, @Then annotations have moved to inner classes of cuke4duke.annotation.EN. (Aslak Hellesøy)
+* @Before, @After, @Transform and @Order annotations have moved to the cuke4duke.annotation package (Aslak Hellesøy)
 
 === Bugfixes
 * Support Tables and PyStrings in Scala (#61 Jon-Anders Teigen)
